[gd_scene load_steps=6 format=3 uid="uid://bdj5j41q1dpht"]

[ext_resource type="Script" uid="uid://b5jj0krj5xytv" path="res://src/gameplay/PlinkoGoal.gd" id="1_mm46k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thl4o"]
size = Vector2(56, 32)

[sub_resource type="Gradient" id="Gradient_thl4o"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mm46k"]
gradient = SubResource("Gradient_thl4o")
width = 4
fill = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xj6mb"]
size = Vector2(4, 64)

[node name="PlinkoGoal" type="StaticBody2D"]
script = ExtResource("1_mm46k")

[node name="RewardLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -19.0
offset_top = -30.0
offset_right = 21.0
offset_bottom = -7.0
text = "+1"
horizontal_alignment = 1

[node name="DetectionArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_thl4o")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-30, 1)
texture = SubResource("GradientTexture2D_mm46k")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(0, 31)
rotation = 1.5707964
texture = SubResource("GradientTexture2D_mm46k")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(30, 1)
texture = SubResource("GradientTexture2D_mm46k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-30, 1)
shape = SubResource("RectangleShape2D_xj6mb")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(30, 1)
shape = SubResource("RectangleShape2D_xj6mb")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(0, 31)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_xj6mb")
